package edu.hitsz.aircraft.enemy.factory;

import edu.hitsz.aircraft.enemy.EnemyBase;

public interface EnemyFactoryInterface {
    EnemyBase genEnemy();
}
