package edu.hitsz.bullet;

public interface BulletFactoryInterface {
    BaseBullet genBullet(int locationX, int locationY, int speedX, int speedY);
}
